Fixed text contrast for highlight in dark mode

--- a/components/dark-palette.scss
+++ b/components/dark-palette.scss
@@ -31,6 +31,7 @@ iframe {
 }
 .rm-highlight,
 .block-highlight-yellow {
+  color: #f2f2f2 !important;
   background-color: hsl(51, 60%, 22%) !important;
 }
 .bp3-overlay-backdrop {
